Fix accesslog and git cloning over HTTP

--- a/ikiwiki.conf
+++ b/ikiwiki.conf
@@ -2,6 +2,7 @@ server.modules += (
     "mod_cgi",
     "mod_auth",
     "mod_setenv",
+    "mod_accesslog", # accesslog.filename
 )
 
 alias.url += (
@@ -11,22 +12,6 @@ $HTTP["url"] =~ "^/ikiwiki$" {
     cgi.assign = ( "" => "" )
 }
 
-# Git HTTP backend
-# TODO separate conf file
-
-alias.url += ( "/git" => "/usr/lib/git-core/git-http-backend" )
-$HTTP["url"] =~ "^/git" {
-    cgi.assign = ("" => "")
-    setenv.add-environment = (
-        "GIT_PROJECT_ROOT" => "/home/ikiwiki/conf/git",
-        "GIT_HTTP_EXPORT_ALL" => ""
-    )
-    $HTTP["querystring"] =~ "service=git-receive-pack" {
-            include "/home/ikiwiki/git-auth.conf"
-    }
-    $HTTP["url"] =~ "^/git/.*/git-receive-pack$" {
-            include "/home/ikiwiki/git-auth.conf"
-    }
+$HTTP["url"] =~ "." {
+   accesslog.filename = "/dev/stderr"
 }
-
-accesslog.filename = "/dev/stdout"
