define REMOTE_USER to enable git push

--- a/git.conf
+++ b/git.conf
@@ -10,5 +10,6 @@ $HTTP["url"] =~ "^/git(?:/|$)" {
     setenv.add-environment = (
         "GIT_PROJECT_ROOT" => "/home/ikiwiki/conf/git",
         "GIT_HTTP_EXPORT_ALL" => "",
+        "REMOTE_USER" => "anonymous",
     )
 }
