use htpasswd for git repositories and ikiwiki auth

--- a/git.conf
+++ b/git.conf
@@ -5,6 +5,10 @@ server.modules += (
 url.rewrite-once         = ( "^/git$" => "/git/" )
 
 $HTTP["url"] =~ "^/git(?:/|$)" {
+
+    # XXX: tighten this to push-only URIs
+    include "/home/ikiwiki/httpauth.conf"
+
     alias.url += ( "/git" => "/usr/lib/git-core/git-http-backend" )
     cgi.assign = ("" => "")
     setenv.add-environment = (
