--- a/ikiwiki.conf
+++ b/ikiwiki.conf
@@ -10,6 +10,8 @@ alias.url += (
 )
 $HTTP["url"] =~ "^/ikiwiki$" {
     cgi.assign = ( "" => "" )
+    # XXX: use cgiauthurl to split out anon-allowed operations
+    include "/home/ikiwiki/httpauth.conf"
 }
 
 $HTTP["url"] =~ "." {
