--- a/ikiwiki.conf
+++ b/ikiwiki.conf
@@ -6,9 +6,9 @@ server.modules += (
 )
 
 alias.url += (
-    "/ikiwiki" => "/home/ikiwiki/ikiwiki.cgi"
+    "/ikiwiki.cgi" => "/home/ikiwiki/ikiwiki.cgi"
 )
-$HTTP["url"] =~ "^/ikiwiki$" {
+$HTTP["url"] == "/ikiwiki.cgi" {
     cgi.assign = ( "" => "" )
     # XXX: use cgiauthurl to split out anon-allowed operations
     include "/home/ikiwiki/httpauth.conf"
