Change HTTP Auth Realm name

--- a/httpauth.conf
+++ b/httpauth.conf
@@ -1,7 +1,7 @@
 auth.require = (
     "/" => (
         "method" => "basic",
-        "realm" => "Git Access",
+        "realm" => "IkiWiki Access",
         "require" => "valid-user"
     )
 )
