--- a/ikiwiki.conf
+++ b/ikiwiki.conf
@@ -1,6 +1,7 @@
 server.modules += (
-    "mod_cgi",
     "mod_auth",
+    "mod_authn_file",
+    "mod_cgi",
     "mod_setenv",
     "mod_accesslog", # accesslog.filename
 )
